--- a/Grid-Astar-Library/grid_and_astar.csproj
+++ b/Grid-Astar-Library/grid_and_astar.csproj
@@ -25,6 +25,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Using Include="Sandbox.Internal.GlobalGameNamespace" Static="true" />
 	</ItemGroup>
 
   <PropertyGroup>
